--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ else{
 }
 hrs = today.getHours();
 if (hrs < 12)
-        greet = 'Good Morning Craig 1';
+        greet = 'Good Morning Craig';
     else if (hrs >= 12 && hrs <= 17)
         greet = 'Good Afternoon Craig ';
     else if (hrs >= 17 && hrs <= 24)
